--- a/styles/issues.css
+++ b/styles/issues.css
@@ -88,12 +88,16 @@
 @media screen and (min-width: 1280px) {
     #embedded-content {
         height: 65vh;
+        width: 80%;
+        margin: 0 auto;
     }
 }
 
 @media screen and (min-width: 1024px) {
     #embedded-content {
         height: 70vh;
+        width: 90%;
+        margin: 0 auto;
     }
 }
 
